[package]
name = "a_sabr"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[features]
default = []
debug = []
contact_work_area = []
node_rx = []
node_tx = []
node_proc = []
contact_suppression = []
first_depleted = ["contact_suppression"]
manual_queueing = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "spsn_benchmark"
harness = false

[[example]]
name = "dijkstra_accuracy"
path = "examples/dijkstra_accuracy/dijkstra_accuracy.rs"

[[example]]
name = "satellite_constellation"
path = "examples/satellite_constellation/satellite_constellation.rs"

[[example]]
name = "bundle_processing"
path = "examples/bundle_processing/bundle_processing.rs"

[[example]]
name = "eto_management"
path = "examples/eto_management/eto_management.rs"

[[example]]
name = "contact_plans"
path = "examples/contact_plans/contact_plans.rs"

[[example]]
name = "0-ion-tvgutil-parsing"
path = "exercises/0-ion-tvgutil-parsing/0-ion-tvgutil-parsing.rs"

[[example]]
name = "1-asabr-static-parsing"
path = "exercises/1-asabr-static-parsing/1-asabr-static-parsing.rs"

[[example]]
name = "2-contact-segmentation"
path = "exercises/2-contact-segmentation/2-contact-segmentation.rs"

[[example]]
name = "3-asabr-dynamic-parsing"
path = "exercises/3-asabr-dynamic-parsing/3-asabr-dynamic-parsing.rs"
